# cmake_tutorial

00_From_a_Simple_Executable_to_Libraries/: build.bat
00_From_a_Simple_Executable_to_Libraries/01_Compiling_a_single_source _file_into_an_executable/c-example/: build.bat
00_From_a_Simple_Executable_to_Libraries/02_Switching_generators/c-example/: build.bat
00_From_a_Simple_Executable_to_Libraries/03_Building_and_linking_static_and_shared_libraries/: cmd.txt  hints.txt
00_From_a_Simple_Executable_to_Libraries/05_Presenting_options_to_the_user/: cmd.txt
00_From_a_Simple_Executable_to_Libraries/07_Switching_the_build_type/: help.txt
00_From_a_Simple_Executable_to_Libraries/08_Controlling_compiler_flags/: There is more - CMake Cookbook.mhtml
00_From_a_Simple_Executable_to_Libraries/09_Setting_the_standard_for_the language/: Getting ready - CMake Cookbook.mhtml  How it works - CMake Cookbook.html  How to do it - CMake Cookbook.html
00_From_a_Simple_Executable_to_Libraries/10_Using_control_flow_constructs/: How it works - CMake Cookbook.html
chapter1/: build.bat
chapter1/03_Building_and_linking_static_and_shared_libraries/: hints.txt
chapter1/06_Specifying_the_compiler/: title.txt
chapter1/07_Switching_the_build_type/: title.txt
chapter1/08_Controlling_compiler_flags/: There is more - CMake Cookbook.mhtml  title.txt
chapter1/09_Setting_the_standard_for_the language/: How to do it - CMake Cookbook.html
chapter1/recipe-01/: title.txt
chapter1/recipe-01/cxx-example/: CMakeLists.txt  build.bat  hello-world.cpp
chapter1/recipe-02/: title.txt
chapter1/recipe-02/cxx-example/: CMakeLists.txt  build.bat  hello-world.cpp
chapter1/recipe-05/: cmd.txt  title.txt
chapter1/recipe-07/: help.docx  help.txt
chapter1/recipe-09/: Getting ready - CMake Cookbook.mhtml  How it works - CMake Cookbook.html  title.txt
chapter1/recipe-10/: How it works - CMake Cookbook.html  title.txt
chapter2/recipe-02/cxx-example/: CMakeLists.txt
chapter2/recipe-05/: HowItWorks.txt
tool/: download_links.txt
tool/mingw64/: version_info.txt
(+36 files in other folders)
